Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2272

gdb won't stop at breakpoint after disable, enable

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 2.1.0
    • None
    • Debugger
    • None
    • Windows Vista x64
      GNU Make 3.81
      g++ (GCC) 4.4.0
      GNU gdb (GDB) 7.1.0.20100329-cvs
      GNU gdb (GDB) 7.2
    • 6f0a50beefffd8333301cd28648d07ad31a60a04

      Tried with Creator from nightly build ( qt-creator-win-opensource-2.0.90-201009060108-setup.exe , 979998f4cf ) and collidingmice example from Qt 4.7.0 branch ( 33a3496032 ).

      Build the example, debug it.
      Insert a breakpoint, e.g. at line 159 of mouse.cpp:

          foreach (QGraphicsItem *item, dangerMice) {
      

      Breakpoint is being hit, execution stops.
      Disable breakpoint, continue debugging.
      Enable breakpoint, execution does not stop.
      Remove breakpoint, insert it again, execution stops.

        1. debugger.log
          40 kB
          Robert Löhning
        2. gdb72.log
          41 kB
          Robert Löhning
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes