debugger: synchronize breakpoints also at enable/disable operations

Task-number: QTCREATORBUG-2272